[package]
name = "near-fetch"
version = "0.0.12"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
High level client library for transacting to the NEAR network.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"

near-account-id = "0.17"
near-crypto = "0.17"
near-primitives = "0.17"
near-jsonrpc-primitives = "0.17"
near-jsonrpc-client = { version = "0.6", default-features = false }

[features]
default = ["rustls-tls", "sandbox"]
adversarial = ["near-jsonrpc-client/adversarial"]
any = ["near-jsonrpc-client/any"]
sandbox = ["near-jsonrpc-client/sandbox"]
native-tls = ["near-jsonrpc-client/native-tls"]
rustls-tls = ["near-jsonrpc-client/rustls-tls"]
