[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
near-account-id = "1.0.0"
near-crypto = "0.20.1"
near-fetch = { path = "../near-fetch" }
near-primitives = "0.20.1"

[[example]]
name = "various_views"
path = "src/various_views.rs"

[[example]]
name = "social_call"
path = "src/social_call.rs"
