[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
near-account-id = "1.0.0"
near-crypto = { git = "https://github.com/near/nearcore", rev = "08941a3c070eca2e6163a4ad1eaed1f0d3ee233c" }
near-fetch = { path = "../near-fetch" }
near-primitives = { git = "https://github.com/near/nearcore", rev = "08941a3c070eca2e6163a4ad1eaed1f0d3ee233c" }

[[example]]
name = "various_views"
path = "src/various_views.rs"

[[example]]
name = "social_call"
path = "src/social_call.rs"
