[package]
name = "near-fetch"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/ChaoticTempest/fetch"
description = """
High level client library for transacting to the NEAR network.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
serde = "1.0"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"

near-account-id = "1"
near-crypto = "0.26"
near-gas = { version = "0.3", features = ["serde", "borsh", "schemars"] }
near-primitives = "0.26"
near-token = "0.3"
near-jsonrpc-primitives = "0.26"
near-jsonrpc-client = { version = "0.13", default-features = false }

[features]
default = ["rustls-tls"]
adversarial = ["near-jsonrpc-client/adversarial"]
any = ["near-jsonrpc-client/any"]
sandbox = ["near-jsonrpc-client/sandbox"]
native-tls = ["near-jsonrpc-client/native-tls"]
rustls-tls = ["near-jsonrpc-client/rustls-tls"]
